# realtimerays

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  build.ninja  build.rs  camera_defaults.h  components.json  flake.nix  gbb-prefix-audit.md  justfile  macos.m  main.c  package.json  pnpm-lock.yaml  scene.c  scene_layout.h  tsconfig.json  vulkan.c
.cargo/: config.toml
.zed/: debug.json  keymap.json  tasks.json
assets/blue_noise/: LICENSE  SOURCE
assets/castles/: castle6.ply
cmake/: embed_spv.cmake
docs/: flake-simplification-plan.md
resources/shaders/: blit.wgsl  denoise.wgsl  denoise_atrous.wgsl  denoise_cnn.wgsl  denoise_rgb_cnn.wgsl  denoise_temporal.wgsl  gradient.comp  trace.comp  trace.wgsl
shaders/: physics.comp  render.comp  shatter.comp  trace.comp
src/: macos.m  macos.rs  macos_platform.m  main.c  main.rs  platform.h  scene.rs  vk.rs  vulkan.rs  windows_platform.c
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-sidebar.tsx  render-scene.tsx  workspace.tsx
src/components/app-sidebar/: index.tsx
src/components/app-sidebar/_components/: camera-mode-info.tsx  camera-settings.tsx  render-pipeline-accordion.tsx  sampling-settings.tsx  scene-settings.tsx  setting-groups.tsx  setting-input.tsx  setting-row.tsx  sidebar-header-actions.tsx  sidebar-section.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menubar.tsx  native-select.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  select.tsx  skeleton.tsx  slider.tsx  spinner.tsx  tabs.tsx  textarea.tsx  (+3 more)
src/lib/: pathtracer.wgsl.ts  pipeline-data.ts  pipeline-types.ts  recording-settings.ts  render-settings.ts  scene-presets.ts
tools/: accel_analysis.py  bench.sh  check_shaders.sh  compare_denoiser.py  correctness_check.c  denoiser_rgb_cnn.md  denoiser_sparse13.md  evaluate_denoiser.py  evaluate_temporal.py  gpucounters.sh  packing_throughput.py  pipeinfo.m  regprobe.sh  requirements-denoiser.txt  run_denoiser_matrix.py  train_denoiser.py  xpost-macos.sh
